--- a/easyfmis/Forms/Software/TrnReceivingReceipt/TrnReceivingReceiptDetailForm.resx
+++ b/easyfmis/Forms/Software/TrnReceivingReceipt/TrnReceivingReceiptDetailForm.resx
@@ -120,6 +120,9 @@
   <metadata name="ColumnReceivingReceiptItemListPOId.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="ColumnReceivingReceiptItemListItemBarCode.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ColumnReceivingReceiptItemListBranchId.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
